apps/oxlint/src/snapshots/fixtures__suppression__report_one_of_the_errors_from_one_file_--type-aware --type-check@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware --type-check
working directory: fixtures/suppression/report_one_of_the_errors_from_one_file
----------

  x 3 new 'eslint/no-unused-vars' errors appeared in folder_b/test.ts.
  help: Update `oxlint-suppressions.json` file running `oxlint --suppress--all`

  x 1 new 'typescript-eslint/array-type' error appeared in folder_b/test.ts.
  help: Update `oxlint-suppressions.json` file running `oxlint --suppress--all`

  x 2 new 'eslint/no-console' errors appeared in folder_b/test.ts.
  help: Update `oxlint-suppressions.json` file running `oxlint --suppress--all`

  ! eslint(no-unused-vars): Variable 'foo' is declared but never used. Unused variables should start with a '_'.
   ,-[folder_b/test.ts:1:7]
 1 | const foo: number = "42";
   :       ^|^
   :        `-- 'foo' is declared here
 2 | console.log();
   `----
  help: Consider removing this declaration.

  x typescript(TS2322): Type 'string' is not assignable to type 'number'.
   ,-[folder_b/test.ts:1:7]
 1 | const foo: number = "42";
   :       ^^^
 2 | console.log();
   `----

  x typescript(TS2584): Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
   ,-[folder_b/test.ts:2:1]
 1 | const foo: number = "42";
 2 | console.log();
   : ^^^^^^^
 3 | 
   `----

  x eslint(no-console): Unexpected console statement.
   ,-[folder_b/test.ts:2:1]
 1 | const foo: number = "42";
 2 | console.log();
   : ^^^^^^^^^^^
 3 | 
   `----
  help: Delete this console statement.

  ! eslint(no-unused-vars): Function 'none' is declared but never used.
   ,-[folder_b/test.ts:4:16]
 3 | 
 4 | async function none() {
   :                ^^|^
   :                  `-- 'none' is declared here
 5 |   console.log();
   `----
  help: Consider removing this declaration.

  x typescript(TS2584): Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
   ,-[folder_b/test.ts:5:3]
 4 | async function none() {
 5 |   console.log();
   :   ^^^^^^^
 6 | }
   `----

  x eslint(no-console): Unexpected console statement.
   ,-[folder_b/test.ts:5:3]
 4 | async function none() {
 5 |   console.log();
   :   ^^^^^^^^^^^
 6 | }
   `----
  help: Delete this console statement.

  ! eslint(no-unused-vars): Variable 'a' is declared but never used. Unused variables should start with a '_'.
   ,-[folder_b/test.ts:8:7]
 7 | 
 8 | const a: Array<number> = new Array<number>();
   :       |
   :       `-- 'a' is declared here
   `----
  help: Consider removing this declaration.

  x typescript-eslint(array-type): Array type using 'Array<number>' is forbidden. Use 'number[]' instead.
   ,-[folder_b/test.ts:8:10]
 7 | 
 8 | const a: Array<number> = new Array<number>();
   :          ^^^^^^^^^^^^^
   `----
  help: Replace `Array<number>` with `number[]`.

Found 3 warnings and 9 errors.
Finished in <variable>ms on 1 file with 83 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
